Revision history for Hailo

{{$NEXT}}

0.42 2010-05-10 21:26:45

    - Hailo should now work on Windows. Dependency on two modules that
      had Windows failures in their dependencies has been dropped.

    - Remove Term::ProgressBar dependency, use Term::Sk
      instead. Unlike Term::ProgressBar it doesn't depend on
      Class::MethodMaker and Term::ReadKey. Those contributed a lot to
      our failures on Windows.
    
    - Don't hard depend on Test::Expect. It depends IO::Tty which does
      not work under any version of Windows, except under Cygwin (it
      calls fcntl(*fd, F_DUPFD, 3)).

    - Remove Test::Synopsis dependency. It depends on
      Filter::Util::Call which had some failures. Now only used if
      it's installed on the system already.

    - Remove MouseX/MooseX::Types dependency. We don't use any of the
      fancy type features, so there's no point in using this.

0.41 2010-04-23 00:24:24

    - Don't (optionally) use Sys::Prctl on Perl 5.13.0 and above. It
      was made redundant in perl core commit 7636ea95c5 by yours
      truly.

    - A script to benchmark Hailo on different locally installed
      perls.

    - Correct test count for TEST_EXHAUSTIVE.

    - Update HALBot on the Web link to http://bifurcat.es

0.40 2010-04-13 15:10:23

    - Add --reply-random to the hailo command-line interface. Allows
      command-line babbling at random.

    - Improved formatting for --train on the command line. Now outputs
      how many lines/s were trained, e.g. "Trained from 11587 lines in
      36.97 seconds; 313.40/"

    - Fixed a bug on Mac OS X and probably some other
      systems. Previously the SQLite code would assume that a file
      that was `-s $file' was an empty database.

      On Mac OS X these files weren't 0 byte but 1 byte files. Route
      around this entire issue by creating a new API (->initialized)
      that checks if the schema has really been created by doing a
      query on the info table.
