@@ -2,6 +2,8 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - Tests failed on 0.42 without Test::Synopsis due to invalid test plan.
+
 0.42 2010-05-10 21:26:45
 
     - Hailo should now work on Windows. Dependency on two modules that
